# mycookup

./: ios-debug-helper.sh
backend/: .gitignore  Cargo.toml  README.md  wrangler.toml
backend/src/: lib.rs
backend/src/handlers/: api.rs  health.rs  mod.rs
backend/src/models/: mod.rs  response.rs
documentation/: instructions_ref.md  instructions_ref2.md
frontend/: .gitignore  DEBUG_CONSOLE_README.md  IOS_PWA_TESTING_GUIDE.md  IPHONE_TESTING_READY.md  LOCAL_DEBUGGING_GUIDE.md  ONESIGNAL_HTTPS_SETUP.md  ONESIGNAL_QUICK_REFERENCE.md  ONESIGNAL_TESTING_GUIDE.md  ONESIGNAL_TROUBLESHOOTING.md  PLAYWRIGHT_TESTING_RESULTS.md  PUSH_NOTIFICATIONS_QUICK_START.md  PUSH_NOTIFICATIONS_TESTING.md  README.md  README_WEBSOCKET_LOGGING.md  TESTING_SUMMARY.md  WEBSOCKET_DEPLOYMENT_GUIDE.md  WEBSOCKET_QUICK_REFERENCE.md  WEBSOCKET_SETUP_GUIDE.md  capacitor-integration-report.json  capacitor.config.ts  debug-console.cjs  debug-console.html  debug-console.html.backup  debug-console.js.backup  index.html  ios-pwa-compatibility-report.json  package-lock.json  package.json  package.json.backup  start-local-debug.sh  test-browser-integration.html  test-local-websocket.html  test-websocket-logging-demo.cjs  tsconfig.cloudflare.json  vite.config.local.ts  vite.config.ts  websocket-logger-worker.js  wrangler-websocket.toml  wrangler.jsonc  wrangler.toml
frontend/public/: _headers  _redirects  manifest.json  sw.js
frontend/scripts/: deploy-websocket-worker.sh  setup-ngrok.sh  setup-remote-debug.sh  start-remote-debug.sh  test-capacitor-integration.cjs  test-ios-pwa-compatibility.cjs  (+3 more)
(+46 files in other folders)
